--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "node src/app.js",
     "start:dev": "nodemon src/app.js",
-    "test": "jest --setupFiles dotenv/config -i",
-    "test:watch:change": "jest --watch --setupFiles dotenv/config -i",
-    "test:watch": "jest --watchAll --coverage --setupFiles dotenv/config -i",
+    "test": "NODE_ENV=test jest --setupFiles dotenv/config -i",
+    "test:watch:change": "NODE_ENV=test jest --watch --setupFiles dotenv/config -i",
+    "test:watch": "NODE_ENV=test jest --watchAll --coverage --setupFiles dotenv/config -i",
     "lint": "eslint .",
     "migrate": "node-pg-migrate",
     "migrate:test": "node-pg-migrate -f config/database/test.json"
