--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /threads {
+    location /threads/ {
         limit_req zone=limit90pm burst=30 nodelay;
         proxy_pass http://127.0.0.1:3000;
     }
