feat: add domain

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;
+    server_name nasty-worlds-know-yearly.st.a.dcdg.xyz www.nasty-worlds-know-yearly.st.a.dcdg.xyz;
 
     location / {
         proxy_pass http://127.0.0.1:3000;
