--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ server {
     }
 
     location /threads/ {
-        limit_req zone=limit90pm burst=30 nodelay;
+        limit_req zone=limit90pm:10m burst=30 nodelay;
         proxy_pass http://127.0.0.1:3000;
     }
 
