fix: add certbot

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,4 +20,27 @@ server {
         proxy_pass http://127.0.0.1:3000;
     }
 
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/nasty-worlds-know-yearly.st.a.dcdg.xyz/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/nasty-worlds-know-yearly.st.a.dcdg.xyz/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+
+server {
+    if ($host = www.nasty-worlds-know-yearly.st.a.dcdg.xyz) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    if ($host = nasty-worlds-know-yearly.st.a.dcdg.xyz) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    server_name nasty-worlds-know-yearly.st.a.dcdg.xyz www.nasty-worlds-know-yearly.st.a.dcdg.xyz;
+    return 404; # managed by Certbot
+
 }
