--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,7 @@ server {
         proxy_set_header Content-Type $content_type;
     }
 
-    location /threads/ {
+    location ~ ^/threads {
         limit_req zone=limit90pm burst=30 nodelay;
         proxy_pass http://127.0.0.1:3000;
         proxy_http_version 1.1;
