--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,5 @@
+limit_req_zone $binary_remote_addr zone=threads:10m rate=90r/m;
+
 server {
     listen 80;
     server_name nasty-worlds-know-yearly.st.a.dcdg.xyz www.nasty-worlds-know-yearly.st.a.dcdg.xyz;
@@ -18,7 +20,7 @@ server {
     }
 
     location ~ ^/threads {
-        limit_req zone=limit90pm burst=30 nodelay;
+        limit_req zone=threads;
         proxy_pass http://127.0.0.1:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
