--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,7 @@ server {
     }
 
     location ~ ^/threads {
-        limit_req zone=threads;
+        limit_req zone=threads burst=1;
         proxy_pass http://127.0.0.1:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
